@@ -2730,10 +2730,9 @@ package body Exp_Ch3 is
                      Actions := Build_Assignment (Id, Expression (Decl));
                   end if;
 
-               --  CPU, Dispatching_Domain, Priority and
-               --  Secondary_Stack_Size components are filled with the
-               --  corresponding rep item expression of the concurrent
-               --  type (if any).
+               --  CPU, Dispatching_Domain, Priority, and Secondary_Stack_Size
+               --  components are filled in with the corresponding rep-item
+               --  expression of the concurrent type (if any).
 
                elsif Ekind (Scope (Id)) = E_Record_Type
                  and then Present (Corresponding_Concurrent_Type (Scope (Id)))
