@@ -1,3 +1,9 @@
+2017-01-12  Gary Dismukes  <dismukes@adacore.com>
+
+	* exp_ch9.adb, s-secsta.adb, snames.ads-tmpl, exp_ch3.adb: Minor
+	reformatting.
+	* debug.adb: Minor comment fixes.
+
 2017-01-12  Arnaud Charlet  <charlet@adacore.com>
 
 	* sem_util.adb (Unique_Entity): For concurrent
